; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_close_preview.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_close_preview.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32*, i32*, i32, i32, i64, i32*, i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i64 }

@IDC_PREVIEW = common dso_local global i32 0, align 4
@preview = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@OBJ_BITMAP = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_preview(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @IDC_PREVIEW, align 4
  %8 = call i32 @GetDlgItem(i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 8, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 8, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 7), align 8
  %9 = call i32 (...) @GetProcessHeap()
  %10 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 6), align 8
  %11 = call i32 @HeapFree(i32 %9, i32 0, i32* %10)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 6), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 5), align 8
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 0), align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 3), align 8
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 4), align 4
  br label %16

16:                                               ; preds = %14, %1
  %17 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 2), align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %27

19:                                               ; preds = %16
  %20 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 2), align 8
  %21 = load i32, i32* @OBJ_BITMAP, align 4
  %22 = call i32 @GetCurrentObject(i32* %20, i32 %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 2), align 8
  %24 = call i32 @DeleteDC(i32* %23)
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @DeleteObject(i32 %25)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 2), align 8
  br label %27

27:                                               ; preds = %19, %16
  %28 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 1), align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %38

30:                                               ; preds = %27
  %31 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 1), align 8
  %32 = load i32, i32* @OBJ_BITMAP, align 4
  %33 = call i32 @GetCurrentObject(i32* %31, i32 %32)
  store i32 %33, i32* %5, align 4
  %34 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 1), align 8
  %35 = call i32 @DeleteDC(i32* %34)
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @DeleteObject(i32 %36)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @preview, i32 0, i32 1), align 8
  br label %38

38:                                               ; preds = %30, %27
  %39 = load i32, i32* %2, align 4
  %40 = load i32, i32* @FALSE, align 4
  %41 = call i32 @preview_bar_show(i32 %39, i32 %40)
  %42 = load i32, i32* %3, align 4
  %43 = call i32 @DestroyWindow(i32 %42)
  ret void
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @GetCurrentObject(i32*, i32) #1

declare dso_local i32 @DeleteDC(i32*) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @preview_bar_show(i32, i32) #1

declare dso_local i32 @DestroyWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
